--- a/src/content/docs/template-syntax/snippet.mdx
+++ b/src/content/docs/template-syntax/snippet.mdx
@@ -207,7 +207,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 </Tabs>
 
 :::note
-Обратите внимание, что вы не можете иметь пропс с именем `children`, если у вас есть контент внутри компонента. По этой причине следует избегать использования пропсов с таким именем.
+Обратите внимание, что вы не можете иметь проп с именем `children`, если у вас есть контент внутри компонента. По этой причине следует избегать использования пропсов с таким именем.
 :::
 
 ### Необязательные пропсы фрагментов
@@ -254,7 +254,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 </script>
 ```
 
-С этим изменением появятся красные волнистые линии, если вы попытаетесь использовать компонент без предоставления пропса `data` и фрагмента `row`. Обратите внимание, что аргумент типа, переданный в `Snippet`, является кортежем, так как фрагменты могут иметь несколько параметров.
+С этим изменением появятся красные волнистые линии, если вы попытаетесь использовать компонент без предоставления пропа `data` и фрагмента `row`. Обратите внимание, что аргумент типа, переданный в `Snippet`, является кортежем, так как фрагменты могут иметь несколько параметров.
 
 Мы можем ещё больше улучшить типизацию, объявив универсальный тип, чтобы `data` и `row` ссылались на один и тот же тип:
 
