--- a/src/content/docs/reference/compiler-warnings.mdx
+++ b/src/content/docs/reference/compiler-warnings.mdx
@@ -638,6 +638,14 @@ Attributes should not contain ':' characters to prevent ambiguity with Svelte di
 Quoted attributes on components and custom elements will be stringified in a future version of Svelte. If this isn't what you want, remove the quotes
 ```
 
+### bidirectional_control_characters
+
+```
+A bidirectional control character was detected in your code. These characters can be used to alter the visual direction of your code and could have unintended consequences
+```
+
+Двунаправленные управляющие символы могут изменять направление отображения текста. Например, с их помощью можно сделать так, чтобы `defabc` отображалось как `abcdef`. Если скопировать код, содержащий такие символы, они могут непреднамеренно изменить поведение программы. Подробнее см. [trojansource.codes](https://trojansource.codes/).
+
 ### bind_invalid_each_rest
 
 ```
