--- a/src/content/docs/runes/state.mdx
+++ b/src/content/docs/runes/state.mdx
@@ -24,7 +24,7 @@ sidebar:
 Если `$state` используется с массивом или простым объектом, результатом будет глубоко реактивный _прокси состояния_. Объекты [Прокси](https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/Global_Objects/Proxy) позволяют Svelte выполнять код при чтении или записи свойств, включая методы, такие как `array.push(...)`, что вызывает детализированные обновления.
 
 :::note
-Классы, такие как `Set` и `Map`, не будут проксированы, но Svelte предоставляет реактивные реализации для различных встроенных объектов, таких как эти, которые можно импортировать из [`svelte/reactivity`](https://svelte.dev/docs/svelte/svelte-reactivity).
+Экземпляры классов не проксируются. Вы можете создавать [реактивные поля состояния](#классы) в классах, которые определяете. Svelte предоставляет реактивные реализации встроенных типов, таких как `Set` и `Map`, которые можно импортировать из [`svelte/reactivity`](https://svelte.dev/docs/svelte/svelte-reactivity).
 :::
 
 Состояние проксируется рекурсивно, пока Svelte не найдет что-то, кроме массива или простого объекта. В таком случае...
