--- a/src/content/docs/template-syntax/use.mdx
+++ b/src/content/docs/template-syntax/use.mdx
@@ -2,8 +2,12 @@
 title: "use:"
 origin: https://svelte.dev/docs/svelte/use
 sidebar:
-  order: 11
+  order: 12
 ---
+
+:::note
+В Svelte 5.29 и новее рекомендуется использовать [привязки](/template-syntax/attach), так как они более гибкие и компонуемые.
+:::
 
 Действия — это функции, которые вызываются, когда элемент монтируется. Они добавляются с помощью директивы `use:`, и обычно используют `$effect`, чтобы сбросить любое состояние, когда элемент размонтируется.
 
