--- a/src/content/docs/kit/core-concepts/load.mdx
+++ b/src/content/docs/kit/core-concepts/load.mdx
@@ -86,7 +86,7 @@ let { data } = $props();
 
 Благодаря сгенерированному модулю `$types` мы получаем полную типобезопасность.
 
-Функция `load` в файле `+page.js` выполняется как на сервере, так и в браузере (если не используется `export const ssr = false`, в этом случае она [выполняется только в браузере](https://svelte.dev/docs/kit/page-options#ssr)). Если ваша функция `load` должна _всегда_ выполняться на сервере (например, потому что использует приватные переменные окружения или обращается к базе данных), её следует поместить в файл `+page.server.js`.
+Функция `load` в файле `+page.js` выполняется как на сервере, так и в браузере (если не используется `export const ssr = false`, в этом случае она [выполняется только в браузере](/kit/core-concepts/page-options#ssr)). Если ваша функция `load` должна _всегда_ выполняться на сервере (например, потому что использует приватные переменные окружения или обращается к базе данных), её следует поместить в файл `+page.server.js`.
 
 Более реалистичная версия функции `load` для поста в блоге, которая выполняется только на сервере и получает данные из базы, может выглядеть так:
 
@@ -338,11 +338,11 @@ let { data, children } = $props();
 2. Затем в браузере во время гидратации (с повторным использованием ответов [fetch-запросов](#выполнение-fetch-запросов))
 3. Все последующие вызовы — исключительно в браузере
 
-Поведение можно настроить через [параметры страницы](https://svelte.dev/docs/kit/page-options). При отключении [SSR](https://svelte.dev/docs/kit/page-options#ssr) универсальные `load` функции _всегда_ выполняются на клиенте.
+Поведение можно настроить через [параметры страницы](/kit/core-concepts/page-options). При отключении [SSR](/kit/core-concepts/page-options#ssr) универсальные `load` функции _всегда_ выполняются на клиенте.
 
 Если маршрут содержит и универсальные, и серверные `load` функции, серверная выполняется первой.
 
-Функция `load` вызывается во время выполнения, кроме случаев [пререндеринга](https://svelte.dev/docs/kit/page-options#prerender) — тогда она вызывается при сборке.
+Функция `load` вызывается во время выполнения, кроме случаев [пререндеринга](/kit/core-concepts/page-options#prerender) — тогда она вызывается при сборке.
 
 ### Входные параметры
 
