--- a/src/content/docs/reference/runtime-warnings.mdx
+++ b/src/content/docs/reference/runtime-warnings.mdx
@@ -242,6 +242,19 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
 - Либо используйте callback-пропсы для передачи изменений
 - Либо пометьте `person` как [`$bindable`](/runes/bindable)
 
+### select_multiple_invalid_value
+
+```
+The `value` property of a `<select multiple>` element should be an array, but it received a non-array value. The selection will be kept as is.
+```
+
+При использовании `<select multiple value={...}>`, Svelte пометит все выбранные элементы `<option>` как выбранные, перебирая массив, переданный в `value`. Если `value` не является массивом, Svelte выдаст предупреждение и оставит выбранные опции без изменений.
+
+Чтобы подавить предупреждение, убедитесь, что `value`:
+
+- является массивом для явного выбора
+- равно `null` или `undefined`, чтобы сохранить текущий выбор
+
 ### state_proxy_equality_mismatch
 
 ```
