--- a/src/content/docs/runes/state.mdx
+++ b/src/content/docs/runes/state.mdx
@@ -23,11 +23,7 @@ sidebar:
 
 Если `$state` используется с массивом или простым объектом, результатом будет глубоко реактивный _прокси состояния_. Объекты [Прокси](https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/Global_Objects/Proxy) позволяют Svelte выполнять код при чтении или записи свойств, включая методы, такие как `array.push(...)`, что вызывает детализированные обновления.
 
-:::note
-Экземпляры классов не проксируются. Вы можете создавать [реактивные поля состояния](#классы) в классах, которые определяете. Svelte предоставляет реактивные реализации встроенных типов, таких как `Set` и `Map`, которые можно импортировать из [`svelte/reactivity`](https://svelte.dev/docs/svelte/svelte-reactivity).
-:::
-
-Состояние проксируется рекурсивно, пока Svelte не найдет что-то, кроме массива или простого объекта. В таком случае...
+Состояние проксируется рекурсивно, пока Svelte не встретит что-то, отличное от массива или простого объекта (например, класс). В таком случае...
 
 ```js
 let todos = $state([
@@ -68,7 +64,7 @@ todos[0].done = !todos[0].done;
 
 ### Классы
 
-Вы также можете использовать `$state` в полях класса (как публичных, так и приватных) или в качестве первого присваивания свойства непосредственно внутри `constructor`:
+Экземпляры классов не проксируются. Вместо этого вы можете использовать `$state` в полях класса (как публичных, так и приватных) или в качестве первого присваивания свойства непосредственно внутри конструктора:
 
 ```js
 class Todo {
@@ -123,6 +119,8 @@ class Todo {
 }
 ```
 
+> Svelte предоставляет реактивные реализации встроенных классов, таких как `Set` и `Map`, которые можно импортировать из [`svelte/reactivity`](https://svelte.dev/docs/svelte/svelte-reactivity).
+
 ## `$state.raw`
 
 В случаях, когда вы не хотите, чтобы объекты и массивы были глубоко реактивными, вы можете использовать `$state.raw`.
@@ -146,6 +144,8 @@ person = {
 ```
 
 Это может улучшить производительность при работе с большими массивами и объектами, которые вы не планировали мутировать, поскольку это позволяет избежать затрат на их реактивность. Обратите внимание, что исходное состояние может _содержать_ реактивное состояние (например, исходный массив реактивных объектов).
+
+Как и в случае со `$state`, вы можете объявлять поля класса, используя `$state.raw`.
 
 ## `$state.snapshot`
 
