--- a/src/content/docs/template-syntax/bind.mdx
+++ b/src/content/docs/template-syntax/bind.mdx
@@ -121,26 +121,27 @@ Svelte создаёт обработчик событий, который обн
 
 ## `<input bind:group>`
 
-Элементы ввода, которые работают вместе, могут использовать `bind:group`:
+Элементы ввода, которые работают вместе, могут использовать `bind:group` ([демонстрация](https://svelte.dev/playground/untitled#H4sIAAAAAAAAE62T32_TMBDH_5XDQkpbrct7SCMGEvCEECDxsO7BSW6L2c227EvbKOv_jp0f6jYhQKJv5_P3PvdL1wstH1Bk4hMSGdgbRzUssFaM9VJciFtF6EV23QvubNRFR_BPUVfWXvodEkdfKT3-zl8Zzag5YETuK6csF1u9ZUIGNo4VkYQNvPYsGRfJF5JKJ8s3QRJE6WoFb2Nq6K-ck13u2Sl9Vxxhlc6QUBIFnz9Brm9ifJ6esun81XoNd860FmtwslYGlLYte5AO4aHlVhJ1gIeKWq92COt1iMtJlkhFPkgh1rHZiiF6K6BUus4G5KafGznCTlIbVUMfQZUWMJh5OrL-C_qjMYSwb1DyiH7iOEuCb1ZpWTUjfHqcwC_GWDVY3ZfmME_SGttSmD9IHaYatvWHIc6xLyqad3mq6KuqcCwnWn9p8p-p71BqP2IH81zc9w2in-od7XORP7ayCpd5YCeXI_-p59mObPF9WmwGpx3nqS2Gzw8TO3zOaS5_GqUXyQUkS3h8hOSz0ZhMESHGc0c4Hm3MAn00t1wrb0l2GZRkqvt4sXwczm6Qh8vnUJzI2LV4vAkvqWgfehTZrSSPx19WiVfFfAQAAA==)):
 
 ```svelte
+// BurritoChooser.svelte
 <script>
   let tortilla = $state('Обычная');
 
-  /** @type {Array<string>} */
+  /** @type {string[]} */
   let fillings = $state([]);
 </script>
 
 <!-- сгруппированные переключатели являются взаимоисключающими -->
-<input type="radio" bind:group={tortilla} value="Обычная" />
-<input type="radio" bind:group={tortilla} value="Цельнозерновая" />
-<input type="radio" bind:group={tortilla} value="Шпинат" />
+<label><input type="radio" bind:group={tortilla} value="Обычная" /> Обычная</label>
+<label><input type="radio" bind:group={tortilla} value="Цельнозерновая" /> Цельнозерновая</label>
+<label><input type="radio" bind:group={tortilla} value="Шпинат" /> Шпинат</label>
 
 <!-- сгруппированные флажки формируют массив -->
-<input type="checkbox" bind:group={fillings} value="Рис" />
-<input type="checkbox" bind:group={fillings} value="Фасоль" />
-<input type="checkbox" bind:group={fillings} value="Сыр" />
-<input type="checkbox" bind:group={fillings} value="Гуакамоле (дополнительно)" />
+<label><input type="checkbox" bind:group={fillings} value="Рис" /> Рис</label>
+<label><input type="checkbox" bind:group={fillings} value="Фасоль" /> Фасоль</label>
+<label><input type="checkbox" bind:group={fillings} value="Сыр" /> Сыр</label>
+<label><input type="checkbox" bind:group={fillings} value="Гуакамоле (дополнительно)" /> Гуакамоле (дополнительно)</label>
 ```
 
 :::note
