--- a/src/content/docs/template-syntax/bind.mdx
+++ b/src/content/docs/template-syntax/bind.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 Данные обычно передаются сверху вниз, от родителя к дочернему компоненту. Директива `bind:` позволяет передавать данные в обратном направлении, от дочернего компонента к родительскому.
 
-Общая синтаксическая структура — `bind:property={expression}`, где `expression` является _lvalue_ (т. е. переменной или свойством объекта). Когда выражение является идентификатором с тем же именем, что и свойство, мы можем опустить выражение — другими словами, эти два варианта эквивалентны:
+Общая синтаксическая структура — `bind:property={expression}`, где `expression` является [_lvalue_](https://press.rebus.community/programmingfundamentals/chapter/lvalue-and-rvalue/) (т. е. переменной или свойством объекта). Когда выражение является идентификатором с тем же именем, что и свойство, мы можем опустить выражение — другими словами, эти два варианта эквивалентны:
 
 ```svelte
 <input bind:value={value} />
