--- a/src/content/docs/runes/state.mdx
+++ b/src/content/docs/runes/state.mdx
@@ -23,7 +23,7 @@ sidebar:
 
 Если `$state` используется с массивом или простым объектом, результатом будет глубоко реактивный _прокси состояния_. Объекты [Прокси](https://developer.mozilla.org/ru/docs/Web/JavaScript/Reference/Global_Objects/Proxy) позволяют Svelte выполнять код при чтении или записи свойств, включая методы, такие как `array.push(...)`, что вызывает детализированные обновления.
 
-Состояние проксируется рекурсивно, пока Svelte не встретит что-то, отличное от массива или простого объекта (например, класс). В таком случае...
+Состояние проксируется рекурсивно, пока Svelte не встретит что-то, отличное от массива или простого объекта (например, класс или объект, созданный через `Object.create`). В таком случае...
 
 ```js
 let todos = $state([
