--- a/src/content/docs/reference/runtime-errors.mdx
+++ b/src/content/docs/reference/runtime-errors.mdx
@@ -132,7 +132,7 @@ Cannot set prototype of `$state` object
 ### state_unsafe_mutation
 
 ```
-Updating state inside a derived or a template expression is forbidden. If the value should not be reactive, declare it without `$state`
+Updating state inside `$derived(...)`, `$inspect(...)` or a template expression is forbidden. If the value should not be reactive, declare it without `$state`
 ```
 
 Эта ошибка возникает при обновлении состояния во время вычисления `$derived`. Вы можете столкнуться с ней при попытке «вывести» (`derive`) два состояния за один раз:
