--- a/src/content/docs/misc/testing.mdx
+++ b/src/content/docs/misc/testing.mdx
@@ -172,12 +172,12 @@ test('Effect', () => {
     // эффекты обычно выполняются после микрозадачи,
     // используйте `flushSync`, чтобы выполнить все ожидающие эффекты синхронно
     flushSync();
-    expect(log.value).toEqual([0]);
+    expect(log).toEqual([0]);
 
     count = 1;
     flushSync();
 
-    expect(log.value).toEqual([0, 1]);
+    expect(log).toEqual([0, 1]);
   });
 
   cleanup();
@@ -193,17 +193,13 @@ test('Effect', () => {
      */
     export function logger(getValue) {
       /** @type {any[]} */
-      let log = $state([]);
+      let log = [];
 
       $effect(() => {
         log.push(getValue());
       });
 
-      return {
-        get value() {
-          return log;
-        }
-      };
+      return log;
     }
     ```
   </TabItem>
@@ -211,17 +207,13 @@ test('Effect', () => {
     ```ts
     // logger.svelte.js
     export function logger(getValue: () => any) {
-      let log: any[] = $state([]);
+      let log: any[] = [];
 
       $effect(() => {
         log.push(getValue());
       });
 
-      return {
-        get value() {
-          return log;
-        }
-      };
+      return log;
     }
     ```
   </TabItem>
