--- a/src/content/docs/kit/core-concepts/form-actions.mdx
+++ b/src/content/docs/kit/core-concepts/form-actions.mdx
@@ -561,11 +561,7 @@ let { data, form } = $props();
 
 ### Настройка `use:enhance`
 
-Для кастомизации можно передать `SubmitFunction`, которая:
-- Выполняется перед отправкой формы
-- Может вернуть колбэк (получающий `ActionResult`)
-
-При возврате колбэка стандартное поведение отключается. Для его восстановления вызовите `update`.
+Для кастомизации можно передать `SubmitFunction`, которая выполняется перед отправкой формы и (опционально) возвращает колбэк (получающий `ActionResult`).
 
 ```svelte
 <form
@@ -587,7 +583,7 @@ let { data, form } = $props();
 
 Эти функции можно использовать для отображения/скрытия индикаторов загрузки и т. д.
 
-При возврате колбэка может потребоваться воспроизвести часть стандартного поведения `use:enhance`, но без инвалидации данных. Это можно сделать через `applyAction`:
+Если вы возвращаете колбэк, вы переопределяете стандартное поведение после отправки формы. Чтобы восстановить его, вызовите `update` (который принимает параметры `invalidateAll` и `reset`) или используйте `applyAction` для результата:
 
 <Tabs syncKey="starlight-package-managers-pkg">
   <TabItem label="JS">
