--- a/src/content/docs/kit/core-concepts/page-options.mdx
+++ b/src/content/docs/kit/core-concepts/page-options.mdx
@@ -221,7 +221,7 @@ export const trailingSlash = 'always';
 
 ## config
 
-Благодаря [адаптерам](https://svelte.dev/docs/kit/adapters) SvelteKit работает на разных платформах. Каждый из них может иметь свои настройки для точной регулировки развёртывания — например, на Vercel можно выбрать, чтобы некоторые части приложения работали ближе к пользователям, а другие — в облаке.
+Благодаря [адаптерам](/kit/build-and-deploy/adapters) SvelteKit работает на разных платформах. Каждый из них может иметь свои настройки для точной регулировки развёртывания — например, на Vercel можно выбрать, чтобы некоторые части приложения работали ближе к пользователям, а другие — в облаке.
 
 `config` — это объект с парами ключ-значение верхнего уровня. Конкретная структура зависит от используемого адаптера. Каждый адаптер должен предоставлять интерфейс `Config` для типизации. Подробности см. в документации вашего адаптера.
 
