--- a/src/content/docs/kit/getting-started/web-standards.mdx
+++ b/src/content/docs/kit/getting-started/web-standards.mdx
@@ -7,7 +7,7 @@ sidebar:
 
 В этой документации вы встретите ссылки на стандартные [Web API](https://developer.mozilla.org/ru/docs/Web/API), поверх которых построен SvelteKit. Вместо изобретения велосипедов мы _используем платформу_, что означает применимость ваших существующих навыков веб-разработки. И наоборот — изучение SvelteKit сделает вас лучше как разработчика.
 
-Эти API доступны во всех современных браузерах и многих небраузерных средах вроде Cloudflare Workers, Deno и Vercel Functions. Во время разработки и в [адаптерах](https://svelte.dev/docs/kit/adapters) для Node-сред (включая AWS Lambda) они реализованы через полифиллы где это необходимо (хотя Node активно добавляет поддержку веб-стандартов).
+Эти API доступны во всех современных браузерах и многих небраузерных средах вроде Cloudflare Workers, Deno и Vercel Functions. Во время разработки и в [адаптерах](/kit/build-and-deploy/adapters) для Node-сред (включая AWS Lambda) они реализованы через полифиллы где это необходимо (хотя Node активно добавляет поддержку веб-стандартов).
 
 Особое внимание стоит уделить следующим разделам:
 
