--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -21,6 +21,14 @@ hero:
       link: /template-syntax/basic-markup
       icon: seti:svelte
       variant: secondary
+    - text: SvelteKit
+      link: /kit/getting-started/introduction
+      icon: seti:svelte
+      variant: secondary
+    - text: Консольные команды
+      link: /cli/introduction/overview
+      icon: seti:shell
+      variant: secondary
 ---
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
