--- a/src/content/docs/kit/getting-started/project-structure.mdx
+++ b/src/content/docs/kit/getting-started/project-structure.mdx
@@ -7,37 +7,35 @@ sidebar:
 
 Обычный проект на SvelteKit имеет следующую структуру:
 
-```tree
-my-project/
-├── src/                      # Исходный код приложения
-│   ├── lib/                  # Вспомогательные модули
-│   │   ├── server/           # Серверные библиотеки (только для backend)
-│   │   │   └── [ваши серверные модули]
-│   │   └── [ваши общие модули] # Доступны через $lib
-│   │
-│   ├── params/               # Параметры маршрутов
-│   │   └── [сопоставители параметров] # Например, slug-валидация
-│   │
-│   ├── routes/               # Маршруты приложения
-│   │   └── [ваши маршруты]   # Файловая система = структура URL
-│   │
-│   ├── app.html              # Основной HTML-шаблон
-│   ├── error.html            # Шаблон для ошибок
-│   ├── hooks.client.js       # Клиентские хуки
-│   ├── hooks.server.js       # Серверные хуки
-│   └── service-worker.js     # Сервис-воркер (PWA)
-│
-├── static/                   # Статические ресурсы
-│   └── [ваши ресурсы]         # Изображения, шрифты и т. д.
-│
-├── tests/                    # Тесты
-│   └── [ваши тесты]          # Unit/e2e тесты
-│
-├── package.json             # Зависимости и скрипты
-├── svelte.config.js         # Конфигурация SvelteKit
-├── tsconfig.json            # Настройки TypeScript
-└── vite.config.js           # Конфигурация Vite
-```
+import { FileTree } from '@astrojs/starlight/components';
+
+<FileTree>
+
+- my-project/
+  - src/        # Исходный код приложения
+    - lib/      # Вспомогательные модули
+      - server/ # Серверные библиотеки (только для backend)
+        - ... [ваши серверные модули]
+      - ... [ваши общие модули] # Доступны через $lib
+    - params/ # Параметры маршрутов
+      - ... [сопоставители параметров] # Например, `slug-`
+    - routes/               # Маршруты приложения
+      - ... [ваши маршруты] # Файловая система = структура URL
+    - app.html              # Основной HTML-шаблон
+    - error.html            # Шаблон для ошибок
+    - hooks.client.js       # Клиентские хуки
+    - hooks.server.js       # Серверные хуки
+    - service-worker.js     # Сервис-воркер (PWA)
+    - static/               # Статические ресурсы
+      - ... [ваши ресурсы]  # Изображения, шрифты и т. д.
+    - tests/                # Тесты
+      - ... [ваши тесты]    # Тесты Unit/e2e
+    - package.json          # Зависимости и скрипты
+    - svelte.config.js      # Конфигурация
+    - tsconfig.json         # Настройки TypeScript
+    - vite.config.js        # Конфигурация Vite
+
+</FileTree>
 
 Вы также найдете такие распространенные файлы, как `.gitignore` и `.npmrc` (а также `.prettierrc` и `eslint.config.js` и так далее, если вы выбрали эти параметры при запуске `npx sv create`).
 
