--- a/src/content/docs/reference/runtime-errors.mdx
+++ b/src/content/docs/reference/runtime-errors.mdx
@@ -7,6 +7,18 @@ sidebar:
 
 ## Ошибки клиента
 
+### async_derived_orphan
+
+```
+Cannot create a `$derived(...)` with an `await` expression outside of an effect tree
+```
+
+В Svelte существует два типа реакций — [`$derived`](/runes/derived) и [`$effect`](/runes/effect). Производные (`derived`) можно создавать где угодно, так как они выполняются _лениво_ и могут быть [собраны сборщиком мусора](https://developer.mozilla.org/en-US/docs/Glossary/Garbage_collection), если на них нет ссылок. Эффекты же, напротив, продолжают выполняться активно при каждом изменении их зависимостей, пока не будут уничтожены.
+
+По этой причине эффекты можно создавать только внутри других эффектов (или [корней эффектов](/runes/effect/#effectroot), таких как создаваемый при первоначальном монтировании компонента), чтобы Svelte знал, когда их нужно уничтожить.
+
+Особый случай возникает, когда производная содержит выражение `await`: поскольку ожидание до момента чтения `{await getPromise()}` для вызова `getPromise` было бы слишком поздним, мы используем эффект для его активного вызова, уведомляя Svelte, когда значение становится доступным. Но поскольку мы используем эффект, асинхронные производные можно создавать только внутри другого эффекта.
+
 ### bind_invalid_checkbox_value
 
 ```
@@ -75,11 +87,27 @@ Effect cannot be created inside a `$derived` value that was not itself created i
 `%rune%` can only be used inside an effect (e.g. during component initialisation)
 ```
 
+### effect_pending_outside_reaction
+
+```
+`$effect.pending()` can only be called inside an effect or derived
+```
+
 ### effect_update_depth_exceeded
 
 ```
 Maximum update depth exceeded. This can happen when a reactive block or effect repeatedly sets a new value. Svelte limits the number of nested updates to prevent infinite loops
 ```
+
+### flush_sync_in_effect
+
+```
+Cannot use `flushSync` inside an effect
+```
+
+Функция `flushSync()` может использоваться для синхронного выполнения всех ожидающих эффектов. Её нельзя вызывать во время текущего выполнения эффектов — то есть, её можно вызывать после изменения состояния, но _не_ внутри эффекта.
+
+Это ограничение применяется только при использовании опции `experimental.async`, которая будет включена по умолчанию в Svelte 6.
 
 ### get_abort_signal_outside_reaction
 
@@ -122,6 +150,14 @@ Rest element properties of `$props()` such as `%property%` are readonly
 ```
 The `%rune%` rune is only available inside `.svelte` and `.svelte.js/ts` files
 ```
+
+### set_context_after_init
+
+```
+`setContext` must be called when a component first initializes, not in a subsequent effect or after an `await` expression
+```
+
+Это ограничение применяется только при использовании опции `experimental.async`, которая будет включена по умолчанию в Svelte 6.
 
 ### state_descriptors_fixed
 
