--- a/src/content/docs/reference/runtime-errors.mdx
+++ b/src/content/docs/reference/runtime-errors.mdx
@@ -99,6 +99,42 @@ Effect cannot be created inside a `$derived` value that was not itself created i
 Maximum update depth exceeded. This can happen when a reactive block or effect repeatedly sets a new value. Svelte limits the number of nested updates to prevent infinite loops
 ```
 
+Если эффект обновляет некоторое состояние, от которого он также зависит, он будет перезапускаться, возможно, в цикле:
+
+```js
+let count = $state(0);
+
+$effect(() => {
+  // это одновременно читает и пишет `count`,
+  // поэтому будет выполняться в бесконечном цикле
+  count += 1;
+});
+```
+
+(Svelte вмешивается до того, как это может привести к сбою вкладки браузера.)
+
+То же самое относится к мутациям массивов, поскольку они одновременно читают и записывают в массив:
+
+```js
+let array = $state(['hello']);
+
+$effect(() => {
+  array.push('goodbye');
+});
+```
+
+Обратите внимание, что эффект может перезапускаться, если он в итоге «стабилизируется»:
+
+```js
+$effect(() => {
+  // это нормально, потому что сортировка уже отсортированного массива
+  // не приведет к мутации
+  array.sort();
+});
+```
+
+Часто при возникновении этой проблемы значение, о котором идет речь, не должно быть состоянием (например, если вы добавляете элементы в массив `logs` в эффекте, сделайте `logs` обычным массивом, а не `$state([])`). В редких случаях, когда вам действительно _нужно_ записывать в состояние в эффекте — [чего следует избегать](/runes/effect#когда-не-использовать-effect) — вы можете читать состояние с помощью [untrack](https://svelte.dev/docs/svelte/svelte#untrack), чтобы избежать добавления его в качестве зависимости.
+
 ### flush_sync_in_effect
 
 ```
