--- a/src/content/docs/runes/state.mdx
+++ b/src/content/docs/runes/state.mdx
@@ -119,9 +119,9 @@ class Todo {
 }
 ```
 
-:::note
+### Встроенные классы
+
 Svelte предоставляет реактивные реализации встроенных классов, таких как `Set` и `Map`, которые можно импортировать из [`svelte/reactivity`](https://svelte.dev/docs/svelte/svelte-reactivity).
-:::
 
 ## `$state.raw`
 
