--- a/src/content/docs/misc/testing.mdx
+++ b/src/content/docs/misc/testing.mdx
@@ -305,7 +305,7 @@ test('Component', async () => {
 });
 ```
 
-При написании тестов компонентов, которые включают двусторонние привязки, контекст или свойства фрагментов, лучше создать обёртку для вашего конкретного теста и взаимодействовать с ней. `@testing-library/svelte` содержит некоторые [примеры](https://testing-library.com/docs/svelte-testing-library/example).
+При написании тестов компонентов, которые включают двусторонние привязки, контекст или свойства сниппетов, лучше создать обёртку для вашего конкретного теста и взаимодействовать с ней. `@testing-library/svelte` содержит некоторые [примеры](https://testing-library.com/docs/svelte-testing-library/example).
 
 ## E2E тесты с использованием Playwright
 
