--- a/src/content/docs/reference/compiler-warnings.mdx
+++ b/src/content/docs/reference/compiler-warnings.mdx
@@ -345,7 +345,7 @@ The scope attribute should only be used with `<th>` elements
 
 Проверьте наличие обязательных атрибутов доступности на элементах:
 
-- `<a>` должен иметь `href` (кроме [тега, определяющего фрагмент](https://github.com/sveltejs/svelte/issues/4697))
+- `<a>` должен иметь `href` (кроме [тега, определяющего сниппет](https://github.com/sveltejs/svelte/issues/4697))
 - `<area>` требует `alt`, `aria-label` или `aria-labelledby`
 - `<html>` должен содержать `lang`
 - `<iframe>` требует `title`
