--- a/src/content/docs/template-syntax/class.mdx
+++ b/src/content/docs/template-syntax/class.mdx
@@ -113,7 +113,7 @@ import { Tabs, TabItem } from '@astrojs/starlight/components';
   </TabItem>
 </Tabs>
 
-Svelte также предоставляет тип `ClassValue`, который является типом значения, принимаемого атрибутом `class` на элементах. Это полезно, если вы хотите использовать безопасное по типу имя класса в пропсах компонента:
+Начиная со Svelte 5.19, Svelte также предоставляет тип `ClassValue`, который представляет собой тип значения, принимаемого атрибутом `class` для элементов. Это полезно, если вы хотите использовать типобезопасное имя класса в пропсах компонента:
 
 ```svelte
 <script lang="ts">
